--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.44.0",
+    "sanity-plugin-singleton-tools": "^1.0.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
