--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Warning: Do not add secrets (API keys and similar) to this file, as it source controlled!
 # Use `.env.local` for any secrets, and ensure it is not added to source control
 
-NEXT_PUBLIC_SANITY_PROJECT_ID="qrkf2w49"
+NEXT_PUBLIC_SANITY_PROJECT_ID="x9jwmz56"
 NEXT_PUBLIC_SANITY_DATASET="production"
     
