--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.1",
+    "@mui/material": "^5.16.1",
     "@portabletext/react": "^3.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/orderable-document-list": "^1.2.1",
@@ -18,6 +22,7 @@
     "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "sanity": "^3.44.0",
     "sanity-plugin-singleton-tools": "^1.0.1",
     "styled-components": "^6.1.11"
