--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
     "sanity": "^3.44.0",
     "sanity-plugin-singleton-tools": "^1.0.1",
