--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/gtag.js": "^0.0.20",
     "next": "14.2.3",
     "next-sanity": "^9.3.10",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
     "sanity": "^3.44.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
